sql/hive/src/test/resources/ql/src/test/queries/negative/unknown_table2.q
FROM src
INSERT OVERWRITE TABLE dummyDest SELECT '1234', src.value WHERE src.key < 100
